Spring/src/Spring/src/Grammar/gen/SpringLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/Ilya.Kaysin/Dropbox/AU/5/IDE/spring-lang/Spring/src/Spring/src/Grammar/SpringLang.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class SpringLangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		TAG=1, IF=2, THEN=3, ELIF=4, ELSE=5, FI=6, FOR=7, WHILE=8, DO=9, OD=10, 
		CASE=11, ESAC=12, REPEAT=13, UNTIL=14, LOCAL=15, OF=16, LENGTH=17, RETURN=18, 
		SKIP_KW=19, FUN=20, ASSIGN=21, OP_DISJ=22, OP_CONJ=23, OP_EQ=24, OP_CMP=25, 
		OP_ADD=26, OP_MUL=27, IDENT=28, DECIMAL=29, TIC=30, DOT=31, COMMA=32, 
		WILDCARD=33, ARROW=34, SEMI=35, BAR=36, LBRACK=37, RBRACK=38, LPAR=39, 
		RPAR=40, LCURL=41, RCURL=42, WS=43, COMMENT_1=44, COMMENT_2=45, UNKNOWN=46;
	public const int
		RULE_program = 0, RULE_funDef = 1, RULE_localVariables = 2, RULE_localVariableList = 3, 
		RULE_identifierDecl = 4, RULE_functionParameterList = 5, RULE_block = 6, 
		RULE_blockWithBraces = 7, RULE_statement = 8, RULE_stmtCall = 9, RULE_loopBlock = 10, 
		RULE_stmtFor = 11, RULE_stmtWhile = 12, RULE_stmtRepeat = 13, RULE_stmtCase = 14, 
		RULE_caseList = 15, RULE_caseListElement = 16, RULE_casePattern = 17, 
		RULE_casePatternList = 18, RULE_stmtIf = 19, RULE_elifBranch = 20, RULE_elseBranch = 21, 
		RULE_stmtAssignment = 22, RULE_arrayIndex = 23, RULE_stmtReturn = 24, 
		RULE_stmtSkip = 25, RULE_atomExpression = 26, RULE_expression = 27, RULE_functionCall = 28, 
		RULE_expressionList = 29, RULE_sExpr = 30, RULE_array = 31, RULE_arrayElementList = 32, 
		RULE_identifier = 33, RULE_number = 34;
	public static readonly string[] ruleNames = {
		"program", "funDef", "localVariables", "localVariableList", "identifierDecl", 
		"functionParameterList", "block", "blockWithBraces", "statement", "stmtCall", 
		"loopBlock", "stmtFor", "stmtWhile", "stmtRepeat", "stmtCase", "caseList", 
		"caseListElement", "casePattern", "casePatternList", "stmtIf", "elifBranch", 
		"elseBranch", "stmtAssignment", "arrayIndex", "stmtReturn", "stmtSkip", 
		"atomExpression", "expression", "functionCall", "expressionList", "sExpr", 
		"array", "arrayElementList", "identifier", "number"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'if'", "'then'", "'elif'", "'else'", "'fi'", "'for'", "'while'", 
		"'do'", "'od'", "'case'", "'esac'", "'repeat'", "'until'", "'local'", 
		"'OF'", "'length'", "'return'", "'skip'", "'fun'", "':='", "'!!'", "'&&'", 
		null, null, null, null, null, null, "'`'", "'.'", "','", "'_'", "'->'", 
		"';'", "'|'", "'['", "']'", "'('", "')'", "'{'", "'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TAG", "IF", "THEN", "ELIF", "ELSE", "FI", "FOR", "WHILE", "DO", 
		"OD", "CASE", "ESAC", "REPEAT", "UNTIL", "LOCAL", "OF", "LENGTH", "RETURN", 
		"SKIP_KW", "FUN", "ASSIGN", "OP_DISJ", "OP_CONJ", "OP_EQ", "OP_CMP", "OP_ADD", 
		"OP_MUL", "IDENT", "DECIMAL", "TIC", "DOT", "COMMA", "WILDCARD", "ARROW", 
		"SEMI", "BAR", "LBRACK", "RBRACK", "LPAR", "RPAR", "LCURL", "RCURL", "WS", 
		"COMMENT_1", "COMMENT_2", "UNKNOWN"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SpringLang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SpringLangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SpringLangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SpringLangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(SpringLangParser.Eof, 0); }
		public FunDefContext[] funDef() {
			return GetRuleContexts<FunDefContext>();
		}
		public FunDefContext funDef(int i) {
			return GetRuleContext<FunDefContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringLangVisitor<TResult> typedVisitor = visitor as ISpringLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			State = 80;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IF:
			case FOR:
			case WHILE:
			case CASE:
			case REPEAT:
			case RETURN:
			case SKIP_KW:
			case FUN:
			case IDENT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==FUN) {
					{
					{
					State = 70; funDef();
					}
					}
					State = 75;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 76; block();
				State = 77; Match(Eof);
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 79; Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunDefContext : ParserRuleContext {
		public ITerminalNode FUN() { return GetToken(SpringLangParser.FUN, 0); }
		public IdentifierDeclContext identifierDecl() {
			return GetRuleContext<IdentifierDeclContext>(0);
		}
		public ITerminalNode LPAR() { return GetToken(SpringLangParser.LPAR, 0); }
		public ITerminalNode RPAR() { return GetToken(SpringLangParser.RPAR, 0); }
		public BlockWithBracesContext blockWithBraces() {
			return GetRuleContext<BlockWithBracesContext>(0);
		}
		public FunctionParameterListContext functionParameterList() {
			return GetRuleContext<FunctionParameterListContext>(0);
		}
		public LocalVariablesContext localVariables() {
			return GetRuleContext<LocalVariablesContext>(0);
		}
		public FunDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.EnterFunDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.ExitFunDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringLangVisitor<TResult> typedVisitor = visitor as ISpringLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunDefContext funDef() {
		FunDefContext _localctx = new FunDefContext(Context, State);
		EnterRule(_localctx, 2, RULE_funDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82; Match(FUN);
			State = 83; identifierDecl();
			State = 84; Match(LPAR);
			State = 86;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENT) {
				{
				State = 85; functionParameterList();
				}
			}

			State = 88; Match(RPAR);
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LOCAL) {
				{
				State = 89; localVariables();
				}
			}

			State = 92; blockWithBraces();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LocalVariablesContext : ParserRuleContext {
		public ITerminalNode LOCAL() { return GetToken(SpringLangParser.LOCAL, 0); }
		public LocalVariableListContext localVariableList() {
			return GetRuleContext<LocalVariableListContext>(0);
		}
		public LocalVariablesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_localVariables; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.EnterLocalVariables(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.ExitLocalVariables(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringLangVisitor<TResult> typedVisitor = visitor as ISpringLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocalVariables(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LocalVariablesContext localVariables() {
		LocalVariablesContext _localctx = new LocalVariablesContext(Context, State);
		EnterRule(_localctx, 4, RULE_localVariables);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; Match(LOCAL);
			State = 95; localVariableList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LocalVariableListContext : ParserRuleContext {
		public IdentifierDeclContext[] identifierDecl() {
			return GetRuleContexts<IdentifierDeclContext>();
		}
		public IdentifierDeclContext identifierDecl(int i) {
			return GetRuleContext<IdentifierDeclContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(SpringLangParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(SpringLangParser.COMMA, i);
		}
		public LocalVariableListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_localVariableList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.EnterLocalVariableList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.ExitLocalVariableList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringLangVisitor<TResult> typedVisitor = visitor as ISpringLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocalVariableList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LocalVariableListContext localVariableList() {
		LocalVariableListContext _localctx = new LocalVariableListContext(Context, State);
		EnterRule(_localctx, 6, RULE_localVariableList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; identifierDecl();
			State = 102;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 98; Match(COMMA);
				State = 99; identifierDecl();
				}
				}
				State = 104;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IdentifierDeclContext : ParserRuleContext {
		public ITerminalNode IDENT() { return GetToken(SpringLangParser.IDENT, 0); }
		public IdentifierDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_identifierDecl; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.EnterIdentifierDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.ExitIdentifierDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringLangVisitor<TResult> typedVisitor = visitor as ISpringLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifierDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IdentifierDeclContext identifierDecl() {
		IdentifierDeclContext _localctx = new IdentifierDeclContext(Context, State);
		EnterRule(_localctx, 8, RULE_identifierDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105; Match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionParameterListContext : ParserRuleContext {
		public IdentifierDeclContext[] identifierDecl() {
			return GetRuleContexts<IdentifierDeclContext>();
		}
		public IdentifierDeclContext identifierDecl(int i) {
			return GetRuleContext<IdentifierDeclContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(SpringLangParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(SpringLangParser.COMMA, i);
		}
		public FunctionParameterListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionParameterList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.EnterFunctionParameterList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.ExitFunctionParameterList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringLangVisitor<TResult> typedVisitor = visitor as ISpringLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionParameterList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionParameterListContext functionParameterList() {
		FunctionParameterListContext _localctx = new FunctionParameterListContext(Context, State);
		EnterRule(_localctx, 10, RULE_functionParameterList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; identifierDecl();
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 108; Match(COMMA);
				State = 109; identifierDecl();
				}
				}
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode[] SEMI() { return GetTokens(SpringLangParser.SEMI); }
		public ITerminalNode SEMI(int i) {
			return GetToken(SpringLangParser.SEMI, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringLangVisitor<TResult> typedVisitor = visitor as ISpringLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 12, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115; statement();
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SEMI) {
				{
				{
				State = 116; Match(SEMI);
				State = 117; statement();
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockWithBracesContext : ParserRuleContext {
		public ITerminalNode LCURL() { return GetToken(SpringLangParser.LCURL, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode RCURL() { return GetToken(SpringLangParser.RCURL, 0); }
		public BlockWithBracesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockWithBraces; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.EnterBlockWithBraces(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.ExitBlockWithBraces(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringLangVisitor<TResult> typedVisitor = visitor as ISpringLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockWithBraces(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockWithBracesContext blockWithBraces() {
		BlockWithBracesContext _localctx = new BlockWithBracesContext(Context, State);
		EnterRule(_localctx, 14, RULE_blockWithBraces);
		try {
			State = 129;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 123; Match(LCURL);
				State = 124; block();
				State = 125; Match(RCURL);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 127; Match(LCURL);
				State = 128; Match(RCURL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public StmtCallContext stmtCall() {
			return GetRuleContext<StmtCallContext>(0);
		}
		public StmtForContext stmtFor() {
			return GetRuleContext<StmtForContext>(0);
		}
		public StmtWhileContext stmtWhile() {
			return GetRuleContext<StmtWhileContext>(0);
		}
		public StmtRepeatContext stmtRepeat() {
			return GetRuleContext<StmtRepeatContext>(0);
		}
		public StmtCaseContext stmtCase() {
			return GetRuleContext<StmtCaseContext>(0);
		}
		public StmtIfContext stmtIf() {
			return GetRuleContext<StmtIfContext>(0);
		}
		public StmtAssignmentContext stmtAssignment() {
			return GetRuleContext<StmtAssignmentContext>(0);
		}
		public StmtReturnContext stmtReturn() {
			return GetRuleContext<StmtReturnContext>(0);
		}
		public StmtSkipContext stmtSkip() {
			return GetRuleContext<StmtSkipContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringLangVisitor<TResult> typedVisitor = visitor as ISpringLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 16, RULE_statement);
		try {
			State = 140;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 131; stmtCall();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 132; stmtFor();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 133; stmtWhile();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 134; stmtRepeat();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 135; stmtCase();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 136; stmtIf();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 137; stmtAssignment();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 138; stmtReturn();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 139; stmtSkip();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtCallContext : ParserRuleContext {
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public StmtCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtCall; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.EnterStmtCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.ExitStmtCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringLangVisitor<TResult> typedVisitor = visitor as ISpringLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtCallContext stmtCall() {
		StmtCallContext _localctx = new StmtCallContext(Context, State);
		EnterRule(_localctx, 18, RULE_stmtCall);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142; functionCall();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LoopBlockContext : ParserRuleContext {
		public ITerminalNode DO() { return GetToken(SpringLangParser.DO, 0); }
		public ITerminalNode OD() { return GetToken(SpringLangParser.OD, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public LoopBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_loopBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.EnterLoopBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISpringLangListener typedListener = listener as ISpringLangListener;
			if (typedListener != null) typedListener.ExitLoopBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISpringLangVisitor<TResult> typedVisitor = visitor as ISpringLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoopBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LoopBlockContext loopBlock() {
		LoopBlockContext _localctx = new LoopBlockContext(Context, State);
		EnterRule(_localctx, 20, RULE_loopBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144; Match(DO);
			State = 146;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << CASE) | (1L << REPEAT) | (1L << RETURN) | (1L << SKIP_KW) | (1L << IDENT))) != 0)) {
				{
				State = 145; block();
				}
			}

			State = 148; Match(OD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
